fix: do not send NetworkPacket if autoshare is disabled when connecting

BUG: 476551